--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jsonwebtoken": "9.0.1",
     "lexical": "0.17.0",
     "lucide-react": "^0.378.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.0-canary.104",
     "payload": "3.0.0-beta.91",
     "payload-admin-bar": "^1.0.6",
